--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ after_success:
   - docker build -t gavinong/multi-worker ./worker
 
   # Log in to docker CLI
-  echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   # push to Dockerhub
   - docker push gavinong/multi-client
   - docker push gavinong/multi-nginx
   - docker push gavinong/multi-server
   - docker push gavinong/multi-worker
-
